--- a/insights/anatomy/anatomy.html
+++ b/insights/anatomy/anatomy.html
@@ -8,9 +8,9 @@
         <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <link href="/styles/page.css" rel="stylesheet" type="text/css">
-        <link href="/public/styles/roboto.css" rel="stylesheet" type="text/css">
+        <link href="/styles/roboto.css" rel="stylesheet" type="text/css">
         <!-- =========== JS script file =========== -->
-        <script type="text/javascript" src="../../../public/styles/page.js"></script>
+        <script type="text/javascript" src="/styles/page.js"></script>
         
         <!--Scroll Smooth-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
