--- a/insights/insights.html
+++ b/insights/insights.html
@@ -7,7 +7,7 @@
         <meta name="authors" content="M.Vanderlooven & M.F.Saathof">
         <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-        <link href="/styles/chapter.css" rel="stylesheet" type="text/css">
+        <link href="/styles/page.css" rel="stylesheet" type="text/css">
         <link href="/styles/roboto.css" rel="stylesheet" type="text/css">
         <!-- =========== JS script file =========== -->
         <script type="text/javascript" src="/styles/chapter.js"></script>
@@ -20,7 +20,7 @@
     <body>
         <!-- =========== HEADER block =========== -->
         <div id="header">
-            <img class="nav-icon" src="/images/Pistil.jpg">
+            <img class="nav-icon" src="images/Pistil.jpg">
         </div>        
         <!-- =========== SCROLL-Indicator =========== -->
         <div id="scroll-indicator-container">
