--- a/index [device].html
+++ b/index [device].html
@@ -378,12 +378,12 @@
             break;
           case 3:
 
-            a.setAttribute("onclick", 'fshowInUI("https://raw.githubusercontent.com/Technical-Grow-Solutions/training/main/data/training-min.json", "Training")');
+            a.setAttribute("onclick", 'fshowInUI("/training/main/data/training-min.json", "Training")');
             img.setAttribute("src", "../images/training.png");
             h2.innerHTML = "Training";
             break;
           case 4:
-            a.setAttribute("onclick", 'fshowInUI("https://raw.githubusercontent.com/Technical-Grow-Solutions/catalog/main/data/catalog-min.json", "Catalog")');
+            a.setAttribute("onclick", 'fshowInUI("/catalog/main/data/catalog-min.json", "Catalog")');
             img.setAttribute("src", "../images/catalog.png");
             h2.innerHTML = "Catalog";
             break;
