--- a/devices/clone-booster/html/reservoir.html
+++ b/devices/clone-booster/html/reservoir.html
@@ -107,7 +107,7 @@
     </tr>
     <tr>
         <td>On</td>
-        <td><img id="tb66x1on" src="../../../public/images/status_green.gif"></td>
+        <td><img id="tb66x1on" src="/images/status_green.gif"></td>
         <td></td>
     </tr>
     <tr>
@@ -162,7 +162,7 @@
     </tr>
     <tr>
         <td>On</td>
-        <td><img id="tb66x2on" src="../../../public/images/status_off.gif"></td>
+        <td><img id="tb66x2on" src="/images/status_off.gif"></td>
         <td></td>
     </tr>
     <tr>
@@ -207,7 +207,7 @@
     </tr>
     <tr>
         <td>On</td>
-        <td><img id="chillon" src="../../../public/images/status_green.gif"></td>
+        <td><img id="chillon" src="/images/status_green.gif"></td>
         <td></td>
     </tr>
 
@@ -222,7 +222,7 @@
     </tr>
     <tr>
         <td>On</td>
-        <td><img id="heaton" src="../../../public/images/status_red.gif"></td>
+        <td><img id="heaton" src="/images/status_red.gif"></td>
         <td></td>
     </tr>
 </table>
