--- a/devices/clone-booster/html/live.html
+++ b/devices/clone-booster/html/live.html
@@ -9,12 +9,12 @@
   </tr>
   <tr>
     <td>Chiller:</td>
-    <td><img id="chillon" src="../../../public/images/status_green.gif"></td>
+    <td><img id="chillon" src="/images/status_green.gif"></td>
     <td></td>
   </tr>
   <tr>
     <td>Heater:</td>
-    <td><img id="heaton" src="../../../public/images/status_red.gif"></td>
+    <td><img id="heaton" src="/images/status_red.gif"></td>
     <td></td>
   </tr>
   <tr>
@@ -32,7 +32,7 @@
   </tr>
   <tr>
     <td>Fogger:</td>
-    <td><img id="fogon" src="../../../public/images/status_green.gif"></td>
+    <td><img id="fogon" src="/images/status_green.gif"></td>
     <td></td>
   </tr>
 </table>
