--- a/training/insights/anatomy/intro/index.html
+++ b/training/insights/anatomy/intro/index.html
@@ -1,4 +1,4 @@
-<p><img class="responsive" src="./images/Intro.png"></p>
+<p><img class="responsive" src="/images/Intro.png"></p>
 <p><STRONG>When you grow a plant, you still need to know how the plant works.
         <br>You don't need a degree in botany, but it can help to know a few essential things about anatomy</STRONG>
 </p>
