--- a/training/q&a/deficiencies/index.html
+++ b/training/q&a/deficiencies/index.html
@@ -7,31 +7,20 @@
     <wbr>
     <!--Macro Nutrients-->
     <p>Macro nutrients:</p>
-    <a href="#Nitrogen"><img class="responsive"
-            src="http://192.168.1.20:5502/training/q&a/deficiencies/images/Nitrogen (N).webp"></a>
-    <a href="#Phosphorus"><img class="responsive"
-            src="http://192.168.1.20:5502/training/q&a/deficiencies/images/Phosphorus (P).webp"></a>
-    <a href="#Potassium"><img class="responsive"
-            src="http://192.168.1.20:5502/training/q&a/deficiencies/images/Potassium (K).webp"></a>
-    <a href="#Calcium"><img class="responsive"
-            src="http://192.168.1.20:5502/training/q&a/deficiencies/images/Calcium (Ca).webp"></a>
-    <a href="#Magnesium"><img class="responsive"
-            src="http://192.168.1.20:5502/training/q&a/deficiencies/images/Magnesium (Mg).webp"></a>
-    <a href="#Sulphur"><img class="responsive"
-            src="http://192.168.1.20:5502/training/q&a/deficiencies/images/Sulphur (S).webp"></a>
+    <a href="#Nitrogen"><img class="responsive" src="/training/q&a/deficiencies/images/Nitrogen (N).webp"></a>
+    <a href="#Phosphorus"><img class="responsive" src="/training/q&a/deficiencies/images/Phosphorus (P).webp"></a>
+    <a href="#Potassium"><img class="responsive" src="/training/q&a/deficiencies/images/Potassium (K).webp"></a>
+    <a href="#Calcium"><img class="responsive" src="/training/q&a/deficiencies/images/Calcium (Ca).webp"></a>
+    <a href="#Magnesium"><img class="responsive" src="/training/q&a/deficiencies/images/Magnesium (Mg).webp"></a>
+    <a href="#Sulphur"><img class="responsive" src="/training/q&a/deficiencies/images/Sulphur (S).webp"></a>
     <wbr>
     <!--Micro Nutrients-->
     <p>Micro nutrients:</p>
-    <a href="#Iron"><img class="responsive"
-            src="http://192.168.1.20:5502/training/q&a/deficiencies/images/Iron (Fe).webp"></a>
-    <a href="#Boron"><img class="responsive"
-            src="http://192.168.1.20:5502/training/q&a/deficiencies/images/Boron (B).webp"></a>
-    <a href="#Molybdenum"><img class="responsive"
-            src="http://192.168.1.20:5502/training/q&a/deficiencies/images/Molybdenum (Mo).webp"></a>
-    <a href="#Manganese"><img class="responsive"
-            src="http://192.168.1.20:5502/training/q&a/deficiencies/images/Manganese (Mn).webp"></a>
-    <a href="#Zinc"><img class="responsive"
-            src="http://192.168.1.20:5502/training/q&a/deficiencies/images/Zinc (Zn).webp"></a>
+    <a href="#Iron"><img class="responsive" src="/training/q&a/deficiencies/images/Iron (Fe).webp"></a>
+    <a href="#Boron"><img class="responsive" src="/training/q&a/deficiencies/images/Boron (B).webp"></a>
+    <a href="#Molybdenum"><img class="responsive" src="/training/q&a/deficiencies/images/Molybdenum (Mo).webp"></a>
+    <a href="#Manganese"><img class="responsive" src="/training/q&a/deficiencies/images/Manganese (Mn).webp"></a>
+    <a href="#Zinc"><img class="responsive" src="/training/q&a/deficiencies/images/Zinc (Zn).webp"></a>
 </div>
 
 <wbr>
